# AlertSage

./: .coveragerc  .gitattributes  .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml  ui_premium.py
.github/: FUNDING.yml
.github/workflows/: deploy-docs.yml  release_dataset.yml  tests.yml
api-reference/: index.html
architecture/: index.html
cli/: index.html
configuration/: index.html
contributing/: index.html
data/: triage.db
data-and-generator/: index.html
development/: index.html
docs/: mitre-attribution.md  notebooks.md  performance.md  ui-guide.md
faq/: index.html
generator/: generate_cyber_incidents.py  launch_generator_fast.sh  monitor_generation.sh
getting-started/: index.html
glossary/: index.html
limitations/: index.html
llm-integration/: index.html
mitre-attribution/: index.html
model-information/: index.html
modeling-and-eval/: index.html
models/: baseline_logreg.joblib  enhanced_logreg.joblib  vectorizer.joblib
notebooks/: 00_getting_started_tutorial.ipynb  index.html
production-generation/: index.html
quickstart/: index.html
release-notes/: index.html
scripts/: benchmark_model_loading.py  build_mitre_snippets.py  download_llama3_8b.py
search/: search_index.json
src/triage/: __init__.py  cli.py  database.py  embeddings.py  llm_client.py  model.py  preprocess.py
testing/: index.html
tests/: test_model_caching.py
ui-guide/: index.html
