[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alertsage"
version = "0.1.0"
description = "NLP-driven incident triage for cybersecurity alerts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Chris Campbell @texasbe2trill" }
]

dependencies = [
  "scikit-learn>=1.3",
  "numpy>=1.23",
  "pandas>=1.5",
  "joblib>=1.2",
  "jinja2>=3.1",
  "rich>=13.0",
  "sentence-transformers>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
]

[project.scripts]
nlp-triage = "triage.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]